[tool.poetry]
name = "dotbot-apk"
version = "0.1.0"
description = ""
authors = ["mnb3000 <misha.mykolyshyn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dotbot = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
